# estatistica_do_basico_ao_avancado_EBA

./: .gitignore  README.md  estatistica_descritiva_house_pricing.ipynb  pyproject.toml  test.py
Aula8_regrecao_linear_anova2_fatores/pratica_regrecao_anova2fat/: anova2_fatores.ipynb
Desafio_aula4/: Desafio_Ong.ipynb  Instruções.docx  Teste de hipótese - aula 4.ipynb
Desafio_aula5/: teste_hipotese_ifood.ipynb
atividades/1.0_estatistica_descritiva/: 1.0_Desafio_Ifood.ipynb  README.md
python_basico/: analise_de_dados_formula1.ipynb  introducao_numpy.ipynb  introducao_pandas.ipynb  plotly_introducao.ipynb
